# diploma

./: .env.simple  README.md  constants.py  docker-compose.yaml  pyproject.toml
config/: settings.py  urls.py
lessons/: models.py  paginations.py  serializer.py  tests.py  urls.py  views.py
lessons/migrations/: 0001_initial.py  0002_lesson_note_id_alter_lesson_id.py
users/: models.py  permissions.py  serializer.py  urls.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py
