[tool.poetry]
name = "diploma"
version = "0.1.0"
description = ""
authors = ["Dmitry Zemlaynkin <ygyshka0@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0"
django-rest-framework = "^0.1.0"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
